feat: Add wing-shaped QR code with logo and fix Auth0 dynamic URLs
- Added BusinessCardPage with wing-shaped QR code container
- Integrated SmartFitter logo in QR code center
- Implemented transparent background QR with white dots
- Fixed Auth0 callback URLs to work dynamically (localhost/production)
- Added proper hover effects and loading states
- Ensured QR code scannability with optimized settings

--- a/.env
+++ b/.env
@@ -2,22 +2,24 @@
 VITE_AUTH0_DOMAIN=dev-ep72g32kymfdnidy.us.auth0.com
 VITE_AUTH0_CLIENT_ID=V203j4Wy2we227yDmwURR1fhpzuwS08U
 VITE_AUTH0_CLIENT_SECRET=j2QhrMkioTmnF_otu7FOo89kp-UKnfhVH9zvjGuSMYaoiaqIMw-HmpC2AP7LfMMa
-VITE_APP_URL=http://localhost:3000
+# Application URLs - Leave empty to use current domain dynamically
+VITE_APP_URL=
 
 # Auth0 API Settings
 VITE_AUTH0_AUDIENCE=https://dev-ep72g32kymfdnidy.us.auth0.com/api/v2/
 VITE_AUTH0_SCOPE=openid profile email
 
-# Application URLs
-VITE_AUTH0_CALLBACK_URL=http://localhost:3000
-VITE_AUTH0_LOGOUT_URL=http://localhost:3000
+# Application URLs - Leave empty to use window.location.origin dynamically
+VITE_AUTH0_CALLBACK_URL=
+VITE_AUTH0_LOGOUT_URL=
 
 # Development Settings
 VITE_DEBUG=true
 
 # Make sure these URLs are added to your Auth0 application settings:
-# - Allowed Callback URLs: http://localhost:3000/*
-# - Allowed Logout URLs: http://localhost:3000
+# - Allowed Callback URLs: https://smartfitter.vercel.app/*, http://localhost:3000/*
+# - Allowed Logout URLs: https://smartfitter.vercel.app, http://localhost:3000
+# - Allowed Web Origins: https://smartfitter.vercel.app, http://localhost:3000
 # - Allowed Web Origins: http://localhost:3000
 # - Allowed Origins (CORS): http://localhost:3000
 
