--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@react-oauth/google": "^0.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
+    "qr-code-styling": "^1.9.2",
+    "qrcode": "^1.5.4",
+    "qrcode-with-logos": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
